# blockchain-gateway

./: .drone.yml  Cargo.toml  Dockerfile  README.md
config/: base.toml  development.toml  test.toml
docker/: docker-compose.yml
docker/rabbitmq/: rabbitmq.conf
docs/: api.yml
k8s/: 00-cm-pay-bc_gw.yml  20-svc-pay-bc_gw.yml  30-deploy-pay-bc_gw.yml
src/: cli.yml  config.rs  lib.rs  main.rs  prelude.rs
src/api/: mod.rs
src/api/controllers/: bitcoin.rs  ethereum.rs  mod.rs
src/api/requests/: mod.rs
src/api/responses/: mod.rs
src/client/: error.rs  http_client.rs  mod.rs
src/client/bitcoin/: error.rs  mod.rs  responses.rs
src/client/ethereum/: mod.rs  responses.rs
src/client/rabbit/: error.rs  mod.rs  r2d2.rs  transactions.rs
src/models/: address.rs  amount.rs  currency.rs  mod.rs  transaction.rs  utxo.rs
src/pollers/: bitcoin.rs  error.rs  ethereum.rs  mod.rs  storiqa.rs
src/rabbit/: error.rs  r2d2.rs  transactions.rs
src/services/: bitcoin.rs  error.rs  ethereum.rs  mod.rs
src/services/poller/: ethereum.rs
